--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,5 +1,5 @@
 /*******************************************************************************
-Slate Theme for GitHub Pages
+Adapted from the Slate Theme for GitHub Pages
 by Jason Costello, @jsncostello
 *******************************************************************************/
 
@@ -50,8 +50,8 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#373737;
-  background: #212121;
+  color:#485D70;
+  background: #539798;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -234,21 +234,30 @@ hr {
 }
 
 table {
-  border: 1px solid #373737;
+  border-collapse:separate;
+  border:solid #485D70 1px;
+  border-radius:6px;
   margin-bottom: 20px;
   text-align: left;
- }
+  overflow: hidden;
+}
+
+td, th {
+  border-left:solid #485D70 1px;
+  border-top:solid #485D70 1px;
+}
 
 th {
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 10px;
-  background: #373737;
+  background: #485D70;
   color: #fff;
+  border-top: none;
  }
 
-td {
+td:first-child {
   padding: 10px;
-  border: 1px solid #373737;
+  border-left: none;
  }
 
 form {
@@ -279,7 +288,7 @@ Full-Width Styles
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
+  background: url('../images/blacktocat.png') #A7D189 no-repeat 95% 50%;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 2px;
@@ -287,12 +296,12 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background: #539798;
+  background: -moz-linear-gradient(top, #485D70, #539798);
+  background: -webkit-linear-gradient(top, #485D70, #539798);
+  background: -ms-linear-gradient(top, #485D70, #539798);
+  background: -o-linear-gradient(top, #485D70, #539798);
+  background: linear-gradient(top, #485D70, #539798);
 }
 
 #header_wrap .inner {
@@ -365,7 +374,7 @@ Full-Width Styles
 }
 
 #footer_wrap {
-  background: #212121;
+  background: #539798;
 }
 
 
